--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -41,11 +41,11 @@
         <div class="form-row">
           <div class="form-group col-md-2 col-lg-2">
             <label for="publishDateMin">Publish date minimum</label>
-            <input type="date" class="form-control" id="publishDateMin" name="date_min">
+            <input type="date" class="form-control" id="publishDateMin" name="year_min">
           </div>
           <div class="form-group col-md-2 col-lg-2">
             <label for="publishDateMax">Publish date maximum</label>
-            <input type="date" class="form-control" id="publishDateMax" name="date_max">
+            <input type="date" class="form-control" id="publishDateMax" name="year_max">
           </div>
         </div>
 
