--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -17,7 +17,7 @@
         <div class="form-row">
             <div class="form-group col-12">
                 <div class="input-group">
-                    <input class="form-control py-2 border-right-0 border" type="search" name="exact_book_id" placeholder="Exact book id..." />
+                    <input class="form-control py-2 border-right-0 border" type="search" name="book_id" placeholder="Exact book id..." />
                     <span class="input-group-append">
                         <div class="input-group-text bg-transparent">
                             <i class="fa fa-search"></i>
@@ -29,7 +29,7 @@
         <div class="form-row">
             <div class="form-group col-12">
                 <div class="input-group">
-                    <input class="form-control py-2 border-right-0 border" type="search" name="author_names" placeholder="Author name/names..." />
+                    <input class="form-control py-2 border-right-0 border" type="search" name="authors" placeholder="Author name/names..." />
                     <span class="input-group-append">
                         <div class="input-group-text bg-transparent">
                             <i class="fa fa-search"></i>
@@ -39,15 +39,17 @@
             </div>
         </div>
         <div class="form-row">
-          <div class="form-group col-md-2 col-lg-2">
-            <label for="publishDateMin">Publish date minimum</label>
-            <input type="date" class="form-control" id="publishDateMin" name="year_min">
+          <div class="form-group col-12">
+              <div class="input-group">
+                  <input class="form-control py-2 border-right-0 border" type="search" name="year" placeholder="Published date..." />
+                  <span class="input-group-append">
+                      <div class="input-group-text bg-transparent">
+                          <i class="fa fa-search"></i>
+                      </div>
+                  </span>
+              </div>
           </div>
-          <div class="form-group col-md-2 col-lg-2">
-            <label for="publishDateMax">Publish date maximum</label>
-            <input type="date" class="form-control" id="publishDateMax" name="year_max">
-          </div>
-        </div>
+      </div>
 
         <button type="submit" class="btn btn-primary">Search</button>
       </form>
