--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -41,7 +41,7 @@
         <div class="form-row">
           <div class="form-group col-12">
               <div class="input-group">
-                  <input class="form-control py-2 border-right-0 border" type="search" name="year" placeholder="Published date..." />
+                  <input class="form-control py-2 border-right-0 border" type="search" name="published_date" placeholder="Published date..." />
                   <span class="input-group-append">
                       <div class="input-group-text bg-transparent">
                           <i class="fa fa-search"></i>
