--- a/templates/app/add_books.html
+++ b/templates/app/add_books.html
@@ -28,7 +28,7 @@
           </div>
         
 
-        <button type="submit" class="btn btn-primary">Search</button>
+        <button type="submit" class="btn btn-primary">Search and add to DB</button>
       </form>
 
       <hr />
